# x-fs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Sim/: CMakeLists.txt
Sim/src/: Sim.cpp  Sim.h  Window.cpp  Window.h  main.cpp
X-FS/: CMakeLists.txt
X-FS/src/: Engine.cpp  Engine.h  Vec3.h
X-FS/src/Aircraft/: Aircraft.cpp  Aircraft.h
X-FS/src/X-FS/: CMakeLists.txt  X-FS.h
X-FS/src/X-FS/Aircraft/: Aircraft.cpp  Aircraft.h  Body.h  Gear.h  Module.h  Spec.h  Wing.h
X-FS/src/X-FS/Engine/: Engine.h
X-FS/src/X-FS/Math/: Transform.h  Vec3.h
examples/: CMakeLists.txt  main.cpp  sample_plane.json  sample_plane.yaml
examples/C172/: Spec.yaml
examples/C172/Bodies/: Fuselage.yaml
src/: Aircraft.cpp  Aircraft.h  Engine.cpp  Engine.h
src/Math/: Vec3.h
